kustomizepractice/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lua
  name: deployment-lua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-lua
  template:
    metadata:
      labels:
        app: app-lua
    spec:
      containers:
      - name: app-lua
        image: nginx:latest
        ports:
        - name: web
          containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 256Mi
            cpu: 250m
